--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   }
 });
       </script>
+      <div class="minres">
+        Sorry, this resolution isnt<br><strong>supported</strong>.
+      </div>
     <textarea type="text" id="input" size="50" aria-rowcount="50" spellcheck="false">
 </body>
 </html>
